fixed desktop alignment of h3 on menu

--- a/css/menu.css
+++ b/css/menu.css
@@ -364,6 +364,10 @@
         position: relative;
     }
 
+    .menu-item h3 {
+        width: 100%;
+    }
+
     .menu-item h3, 
     .menu-item span,
     .menu-item p {
